Consertei problemas de merge

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,16 @@
         <activity
             android:name=".Conquista"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.conquista"
-            android:exported="false" />
-        <activity
-            android:name=".Conquistas"
-            android:exported="false"
-            android:label="@string/title_activity_conquistas"
-            android:theme="@style/Theme.MyApplication.NoActionBar" />
+
         <activity
             android:name=".MainActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
